--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 
-This is the WSS server for the 100 game. It was written with .NET 5.0 that is currently out of support.
+This was the WSS server for the 100 game. It was written with .NET 5.0 that is currently out of support.
